--- a/index.HTML
+++ b/index.HTML
@@ -13,18 +13,19 @@
     <h2>I am Kyrinz</h2>
     </div>
   <nav>
-    
-    <a href="about.HTML">About</a>
-    <a href="projects.html">Projects</a>
-    <a href="blog.html">Blog</a>
+  <a href="pages/about.html">About</a>
+  <a href="pages/projects.html">Projects</a>
+  <a href="pages/blog.html">Blog</a>
   </nav>
   </header>
 
   <main>
-    <!-- Nội dung chính -->
+    <div>
+        <h1>About my Projects</h1>
+    </div>
   </main>
 
-  <footer>
+  <footer>  
     <!-- Bản quyền -->
   </footer>
 </body>
