--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -12,7 +12,7 @@
       <li>JavaScript</li>
     </ul>
     <nav>
-         <a href="index.HTML">Home</a>
+         <a href="/index.HTML">Home</a>
     </nav>
     
   </section>
