--- a/index.HTML
+++ b/index.HTML
@@ -23,7 +23,16 @@
     <div>
         <h1>About my Projects</h1>
     </div>
+    <div>
+    <nav>
+      <h3>Skills</h3>
+      <h4>Click here if you want to know more</h4>
+      <a href="pages/skills.HTML">Click !</a>
+    </nav>
+
+  </div>
   </main>
+  
 
   <footer>  
     <!-- Bản quyền -->
