--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,7 +1,9 @@
 <main>
   <section>
     <h2>Giới thiệu</h2>
-    <p>Tôi là sinh viên CNTT...</p>
+    <p>Tôi là sinh viên CNTT of</p>
+    <h2>I-HUTECH</h2>
+    <h3>HUTECH International Insitute of Education (HIIE)</h3>
   </section>
 
   <section>
@@ -12,6 +14,7 @@
       <li>JavaScript</li>
     </ul>
     <nav>
+        <a href="skills.HTML">More</a>
          <a href="/index.HTML">Home</a>
     </nav>
     
