--- a/index.HTML
+++ b/index.HTML
@@ -8,17 +8,24 @@
 <body>
     
   <header>
-    <div>
-    <h1>Welcome !</h1>
-    <h2>I am Kyrinz</h2>
-    </div>
+  <!-- main banner -->
+    <section >
+        <div >
+            <div>
+            <div >
+                <h2 >Hi, it's me Kyrinz</h2>
+                <p>I am a developer in Ho Chi Minh City</p>
+            </div>
+            </div>
+        </div>
+    </section>
   <nav>
   <a href="pages/about.html">About</a>
   <a href="pages/projects.html">Projects</a>
   <a href="pages/blog.html">Blog</a>
   </nav>
   </header>
-
+ 
   <main>
     <div>
         <h1>About my Projects</h1>
