--- a/index.HTML
+++ b/index.HTML
@@ -23,6 +23,7 @@
   <a href="pages/about.html">About</a>
   <a href="pages/projects.html">Projects</a>
   <a href="pages/blog.html">Blog</a>
+  <a href="pages/education.HTML">Education</a>
   </nav>
   </header>
  
@@ -30,12 +31,14 @@
     <div>
         <h1>About my Projects</h1>
     </div>
-
+    <img src="" alt="">
+    <img src="" alt="">
+    <img src="" alt="">
   </main>
-  
-
   <footer>  
-    <!-- Bản quyền -->
+    <p>This is portfolio web is created by only Kyrinz</p>
+
   </footer>
 </body>
+
 </html>
