--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,17 +1,18 @@
 <main>
   <section>
     <h2>Giới thiệu</h2>
-    <p>Tôi là sinh viên CNTT of</p>
+    <p>I'm IT student of</p>
     <h2>I-HUTECH</h2>
     <h3>HUTECH International Insitute of Education (HIIE)</h3>
   </section>
 
   <section>
-    <h2>Kỹ năng</h2>
+    <h2>Skil</h2>
     <ul>
-      <li>HTML</li>
-      <li>CSS</li>
-      <li>JavaScript</li>
+    <li>HTML, CSS: xây dựng giao diện, layout cơ bản</li>
+    <li>JavaScript: xử lý tương tác đơn giản</li>
+    <li>Java: lập trình hướng đối tượng (OOP)</li>
+    <li>Git, GitHub: quản lý mã nguồn</li>
     </ul>
     <nav>
         <a href="skills.HTML">More</a>
