--- a/pages/projects.HTML
+++ b/pages/projects.HTML
@@ -7,7 +7,7 @@
 Trang web giới thiệu cá nhân sử dụng HTML, CSS và JavaScript.
 </p>
 <p>Công nghệ: HTML, CSS, JS</p>
-<a href="#">GitHub</a>
+<a href="https://github.com/Kyrr1nz">My GitHub</a>
 
         <nav>
             <a href="/index.HTML">Home</a>
