--- a/index.HTML
+++ b/index.HTML
@@ -13,7 +13,7 @@
         <div >
             <div>
             <div >
-                <h2 >Hi, it's me Kyrinz</h2>
+                <h1 >Hi, it's me Kyrinz</h1>
                 <p>I am a developer in Ho Chi Minh City</p>
             </div>
             </div>
@@ -29,16 +29,31 @@
  
   <main>
     <div>
-        <h1>About my Projects</h1>
+        <h1>About my Work Experiences</h1>
     </div>
     <img src="" alt="">
     <img src="" alt="">
     <img src="" alt="">
+      <h2></h2>
+
+  <h1>Education</h1>
+    <p>Infomation Technology</p>
+    <p>HUTECH International Insitute of Education</p>
+    <p>GPA : 3.0 </p>
+    <a href="pages/about.HTML">More info</a>
+  
+  <h1>Additional Infomation</h1>
+  <p>Languagues : </p>
+  <p>Technologies : </p>
+  <p>Certification : </p>
+  <p>Languague skill : </p>
+  <a href="pa"></a>
   </main>
   <footer>  
     <p>This is portfolio web is created by only Kyrinz</p>
-
+    <a href="pages/contact.html">Contact</a>
   </footer>
+
 </body>
 
 </html>
