--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,23 +1,31 @@
 <main>
   <section>
-    <h2>Giới thiệu</h2>
-    <p>I'm IT student of</p>
+    <h2>About me</h2>
+    <p>I'm Infomation Technology student of</p>
     <h2>I-HUTECH</h2>
     <h3>HUTECH International Insitute of Education (HIIE)</h3>
+    <p>GPA : 3.0 </p>
   </section>
 
   <section>
-    <h2>Skil</h2>
+    <h2>Skills</h2>
     <ul>
-    <li>HTML, CSS: xây dựng giao diện, layout cơ bản</li>
-    <li>JavaScript: xử lý tương tác đơn giản</li>
-    <li>Java: lập trình hướng đối tượng (OOP)</li>
-    <li>Git, GitHub: quản lý mã nguồn</li>
+    <li>Languague : C,C++,C#,Java,HTML,CSS,JavaScript</li>
+    <li>Framework : </li>
+    <li>Technology : Git, GitHub</li>
+    <li>Database : MySQL,MongoDB,Microsoft SQL Server </li>
+    <li>Soft Skill : English, Comunication, Critical thinking,Self learning & Researching</li>
+    </ul>
+    <h2>Native Skill</h2>
+    <ul>
+      <li>English : B1 </li>
+      <li>Teamwork</li>
+      <li>Comunication</li>
+      <li>Critical Thinking</li>
     </ul>
     <nav>
-        <a href="skills.HTML">More</a>
          <a href="/index.HTML">Home</a>
     </nav>
-    
   </section>
+  <p>There's </p>
 </main>
