--- a/index.HTML
+++ b/index.HTML
@@ -9,25 +9,22 @@
     
   <header>
   <!-- main banner -->
-    <section >
-        <div >
-            <div>
-            <div >
-                <h1 >Hi, it's me Kyrinz</h1>
-                <p>I am a developer in Ho Chi Minh City</p>
-            </div>
-            </div>
-        </div>
+    <section>
+      <h1>Hi, it's me Kyrinz</h1>
+      <p>I am a developer in Ho Chi Minh City</p>
     </section>
-  <nav>
-  <a href="pages/about.html">About</a>
-  <a href="pages/projects.html">Projects</a>
-  <a href="pages/blog.html">Blog</a>
-  <a href="pages/education.HTML">Education</a>
-  </nav>
+    <nav>
+      <ul>
+        <li><a href="pages/about.html">About</a></li>
+        <li><a href="pages/projects.html">Projects</a></li>
+        <li><a href="pages/blog.html">Blog</a></li>
+        <li><a href="pages/education.HTML">Education</a></li>
+      </ul>
+    </nav>
   </header>
  
   <main>
+    <section>
     <div>
         <h1>About my Work Experiences</h1>
     </div>
@@ -35,25 +32,31 @@
     <img src="" alt="">
     <img src="" alt="">
       <h2></h2>
-
+</section>
+<section>
   <h1>Education</h1>
     <p>Infomation Technology</p>
     <p>HUTECH International Insitute of Education</p>
     <p>GPA : 3.0 </p>
     <a href="pages/about.HTML">More info</a>
   
-  <h1>Additional Infomation</h1>
+  <h2>Additional Infomation</h2>
   <p>Languagues : </p>
   <p>Technologies : </p>
   <p>Certification : </p>
   <p>Languague skill : </p>
-  <a href="pa"></a>
+  <a href=""></a>
+  </section>
   </main>
   <footer>  
+    <section>
     <p>This is portfolio web is created by only Kyrinz</p>
     <a href="pages/contact.html">Contact</a>
+    <p>GitHub : </p>
+    <p>Email : </p>
+    <p>Phone : </p>
+    </section>
   </footer>
-
+  
 </body>
-
 </html>
