--- a/index.HTML
+++ b/index.HTML
@@ -4,25 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
     
   <header>
+    <section>
+      <nav>
+        <ul>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/projects.html">Projects</a></li>
+          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="pages/education.HTML">Education</a></li>
+        </ul>
+      </nav>
+    </section>
   <!-- main banner -->
     <section>
-      <h1>Hi, it's me Kyrinz</h1>
+      <h1 id="hello">Hi, it's me Kyrinz</h1>
       <p>I am a developer in Ho Chi Minh City</p>
-    </section>
-    <nav>
-      <ul>
-        <li><a href="pages/about.html">About</a></li>
-        <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages/blog.html">Blog</a></li>
-        <li><a href="pages/education.HTML">Education</a></li>
-      </ul>
-    </nav>
+  </section>
   </header>
- 
   <main>
     <section>
     <div>
@@ -34,18 +36,18 @@
       <h2></h2>
 </section>
 <section>
-  <h1>Education</h1>
-    <p>Infomation Technology</p>
-    <p>HUTECH International Insitute of Education</p>
-    <p>GPA : 3.0 </p>
-    <a href="pages/about.HTML">More info</a>
-  
-  <h2>Additional Infomation</h2>
-  <p>Languagues : </p>
-  <p>Technologies : </p>
-  <p>Certification : </p>
-  <p>Languague skill : </p>
-  <a href=""></a>
+    <h1>Education</h1>
+      <p>Infomation Technology</p>
+      <p>HUTECH International Insitute of Education</p>
+      <p>GPA : 3.0 </p>
+      <a href="pages/about.HTML">More info</a>
+    
+    <h2>Additional Infomation</h2>
+      <p>Languagues : </p>
+      <p>Technologies : </p>
+      <p>Certification : </p>
+      <p>Languague skill : </p>
+      <a href=""></a>
   </section>
   </main>
   <footer>  
