--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -5,15 +5,18 @@
     <h2>I-HUTECH</h2>
     <h3>HUTECH International Insitute of Education (HIIE)</h3>
     <p>GPA : 3.0 </p>
+    <a href="pages/education.HTML">More info</a>
   </section>
 
   <section>
     <h2>Skills</h2>
     <ul>
+      <li>Frontend : </li>
+      <li>Backend : </li>
     <li>Languague : C,C++,C#,Java,HTML,CSS,JavaScript</li>
     <li>Framework : </li>
     <li>Technology : Git, GitHub</li>
-    <li>Database : MySQL,MongoDB,Microsoft SQL Server </li>
+    <li>Database : MySQL,MongoDB,SQLServer </li>
     <li>Soft Skill : English, Comunication, Critical thinking,Self learning & Researching</li>
     </ul>
     <h2>Native Skill</h2>
