--- a/pages/education.HTML
+++ b/pages/education.HTML
@@ -1,9 +1,11 @@
-<section>
-    <h2>Học vấn</h2>
-<p>
-Sinh viên ngành Công nghệ Thông tin<br>
-Trường: …<br>
-Thời gian: …
-</p>
-
-</section>
+<main>
+    <section>
+        <h1>Học vấn</h1>
+    <p>
+    Undergraduation of Infomation Technologies<br>
+    Trường: I-HUTECH<br>
+    Thời gian: 2023
+    </p>
+    <a href="/index.HTML">Home</a>
+    </section>
+</main>
