--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,5 +1,15 @@
 <main>
   <section>
+          <nav>
+        <ul>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/projects.html">Projects</a></li>
+          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="pages/education.HTML">Education</a></li>
+        </ul>
+      </nav>
+  </section>
+  <section>
     <h2>About me</h2>
     <p>I'm Infomation Technology student of</p>
     <h2>I-HUTECH</h2>
