Upate for some pages

--- a/index.HTML
+++ b/index.HTML
@@ -15,17 +15,17 @@
           <li><a href="pages/about.html">About</a></li>
           <li><a href="pages/projects.html">Projects</a></li>
           <li><a href="pages/blog.html">Blog</a></li>
-          <li><a href="pages/education.HTML">Education</a></li>
+          <li><a href="pages/education.html">Education</a></li>
         </ul>
       </nav>
     </section>
   <!-- main banner -->
-    <section>
+  </header>
+  <main>
+        <section>
       <h1 id="hello">Hi, it's me Kyrinz</h1>
       <p>I am a developer in Ho Chi Minh City</p>
   </section>
-  </header>
-  <main>
     <section>
     <div>
         <h1>About my Work Experiences</h1>
@@ -40,7 +40,7 @@
       <p>Infomation Technology</p>
       <p>HUTECH International Insitute of Education</p>
       <p>GPA : 3.0 </p>
-      <a href="pages/about.HTML">More info</a>
+      <a href="pages/about.html">More info</a>
     
     <h2>Additional Infomation</h2>
       <p>Languagues : </p>
