--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,21 +1,26 @@
-<main>
-  <section>
-          <nav>
+<head>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<header>
+    <section>
+        <nav>
         <ul>
-          <li><a href="pages/about.html">About</a></li>
-          <li><a href="pages/projects.html">Projects</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
-          <li><a href="pages/education.HTML">Education</a></li>
+          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="education.html">Education</a></li>
         </ul>
       </nav>
   </section>
+</header>
+<main>
   <section>
     <h2>About me</h2>
     <p>I'm Infomation Technology student of</p>
     <h2>I-HUTECH</h2>
     <h3>HUTECH International Insitute of Education (HIIE)</h3>
     <p>GPA : 3.0 </p>
-    <a href="pages/education.HTML">More info</a>
+    <a href="education.HTML">More info</a>
   </section>
 
   <section>
