--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,17 @@
+<head>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
 <main>
+    <section>
+              <nav>
+        <ul>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="pages/projects.html">Projects</a></li>
+          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="pages/education.html">Education</a></li>
+        </ul>
+      </nav>
+    </section>
     <section>
         <h2>Contact</h2>
         <p>Email : tranduythanh@gmail.com</p>
@@ -9,6 +22,6 @@ và đóng góp cho đội ngũ của công ty.
 </p>
     </section>
     <nav>
-        <a href="/index.HTML">Home</a>
+        <a href="/index.html">Home</a>
     </nav>
 </main>
