--- a/pages/education.HTML
+++ b/pages/education.HTML
@@ -1,11 +1,28 @@
+<head>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
+<footer>
+      <section>
+              <nav>
+        <ul>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="/index.html">Home</a></li>
+        </ul>
+      </nav>
+    </section>
+    <section>
+      <h1>Education</h1>
+    </section>
+</footer>
 <main>
     <section>
-        <h1>Học vấn</h1>
     <p>
     Undergraduation of Infomation Technologies<br>
     Trường: I-HUTECH<br>
     Thời gian: 2023
     </p>
-    <a href="/index.HTML">Home</a>
+    <a href="/index.html">Home</a>
     </section>
 </main>
