--- a/pages/projects.HTML
+++ b/pages/projects.HTML
@@ -1,7 +1,17 @@
+<head>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
 <main>
     <section>
+              <nav>
+        <ul>
+          <li><a href="pages/about.html">About</a></li>
+          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="pages/education.HTML">Education</a></li>
+        </ul>
+      </nav>
         <h2>Dự án</h2>
-
 <h3>Personal Portfolio Website</h3>
 <p>
 Trang web giới thiệu cá nhân sử dụng HTML, CSS và JavaScript.
