--- a/pages/blog.HTML
+++ b/pages/blog.HTML
@@ -1,5 +1,17 @@
+<head>
+  <link rel="stylesheet" href="assets/style.css">
+</head>
 <main>
-
+<section>
+          <nav>
+        <ul>
+          <li><a href="about.html">About</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="education.html">Education</a></li>
+        </ul>
+      </nav>
+</section>
 <nav>
     <a href="/index.HTML">Home</a>
 </nav>
