Upate for some pages

--- a/pages/about.HTML
+++ b/pages/about.HTML
@@ -1,11 +1,11 @@
 <head>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <header>
     <section>
         <nav>
         <ul>
-          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="blog.html">Blog</a></li>
           <li><a href="education.html">Education</a></li>
@@ -20,7 +20,7 @@
     <h2>I-HUTECH</h2>
     <h3>HUTECH International Insitute of Education (HIIE)</h3>
     <p>GPA : 3.0 </p>
-    <a href="education.HTML">More info</a>
+    <a href="education.html">More info</a>
   </section>
 
   <section>
