--- a/pages/blog.HTML
+++ b/pages/blog.HTML
@@ -1,5 +1,6 @@
+<html>
 <head>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <main>
 <section>
@@ -7,7 +8,7 @@
         <ul>
           <li><a href="about.html">About</a></li>
           <li><a href="projects.html">Projects</a></li>
-          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="education.html">Education</a></li>
         </ul>
       </nav>
@@ -16,3 +17,4 @@
     <a href="/index.HTML">Home</a>
 </nav>
 </main>
+</html>
