--- a/pages/projects.HTML
+++ b/pages/projects.HTML
@@ -1,5 +1,5 @@
 <head>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <main>
     <section>
@@ -18,7 +18,6 @@ Trang web giới thiệu cá nhân sử dụng HTML, CSS và JavaScript.
 </p>
 <p>Công nghệ: HTML, CSS, JS</p>
 <a href="https://github.com/Kyrr1nz">My GitHub</a>
-
         <nav>
             <a href="/index.HTML">Home</a>
         </nav>
