--- a/index.HTML
+++ b/index.HTML
@@ -27,13 +27,7 @@
       <p>I am a developer in Ho Chi Minh City</p>
   </section>
 
-<section>
-    <h1>Education</h1>
-      <p>Infomation Technology</p>
-      <p>HUTECH International Insitute of Education</p>
-      <p>GPA : 3.0 </p>
-      <a href="pages/about.html">More info</a>
-    
+<section >
     <h2 id="inf">Additional Infomation</h2>
       <p>Languagues : </p>
       <p>Technologies : </p>
@@ -45,12 +39,14 @@
     <div>
         <h1>About my Work Experiences</h1>
     </div>
+    <nav>
     <img src="" alt="">
     <img src="" alt="">
     <img src="" alt="">
-      <h2></h2>
+      </nav>
 </section>
   </main>
+  
   <footer>  
     <section>
     <p>This is portfolio web is created by only Kyrinz</p>
