--- a/index.HTML
+++ b/index.HTML
@@ -28,12 +28,18 @@
   </section>
 
 <section >
-    <h2 id="inf">Additional Infomation</h2>
-      <p>Languagues : </p>
+    <h2 id="inf">Basic Infomation</h2>
+      <p>Frontend : HTML,CSS,JavaScript</p>
+      <p>Backend : </p>
       <p>Technologies : </p>
       <p>Certification : </p>
       <p>Languague skill : </p>
       
+      <nav>
+        <ul>
+          <li><a href="pages/education.html">More</a></li>
+        </ul>
+      </nav>
   </section>
       <section>
     <div>
@@ -46,7 +52,7 @@
       </nav>
 </section>
   </main>
-  
+
   <footer>  
     <section>
     <p>This is portfolio web is created by only Kyrinz</p>
