--- a/index.HTML
+++ b/index.HTML
@@ -37,7 +37,7 @@
       
       <nav>
         <ul>
-          <li><a href="pages/education.html">More</a></li>
+          <li><a id="Moreinf" href="pages/education.html">More</a></li>
         </ul>
       </nav>
   </section>
@@ -56,8 +56,15 @@
   <footer>  
     <section>
     <p>This is portfolio web is created by only Kyrinz</p>
+    <nav>
     <a href="pages/contact.html">Contact</a>
-    <p>GitHub : </p>
+    </nav>
+    
+    </section>
+    <section>
+      <nav>
+        <p>GitHub : <a href="https://github.com/Kyrr1nz">Kyrinz</a></p>
+      </nav>
     </section>
   </footer>
   
