--- a/pages/education.HTML
+++ b/pages/education.HTML
@@ -5,9 +5,9 @@
       <section>
               <nav>
         <ul>
-          <li><a href="pages/about.html">About</a></li>
-          <li><a href="projects.html">Projects</a></li>
-          <li><a href="pages/blog.html">Blog</a></li>
+          <li><a href="/pages/about.html">About</a></li>
+          <li><a href="/pages/projects.html">Projects</a></li>
+          <li><a href="/pages/blog.html">Blog</a></li>
           <li><a href="/index.html">Home</a></li>
         </ul>
       </nav>
@@ -20,7 +20,7 @@
     <section>
     <p>
     Undergraduation of Infomation Technologies<br>
-    Trường: I-HUTECH<br>
+    University: HUTECH - Ho Chi Minh City of Technology<br>
     Thời gian: 2023
     </p>
     <a href="/index.html">Home</a>
