--- a/pages/projects.HTML
+++ b/pages/projects.HTML
@@ -6,9 +6,9 @@
               <nav>
         <ul>
           <li><a href="pages/about.html">About</a></li>
-          <li><a href="/index.HTML">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="pages/blog.html">Blog</a></li>
-          <li><a href="pages/education.HTML">Education</a></li>
+          <li><a href="pages/education.html">Education</a></li>
         </ul>
       </nav>
         <h2>Dự án</h2>
