--- a/pages/projects.HTML
+++ b/pages/projects.HTML
@@ -13,11 +13,9 @@
       </nav>
         <h2>Dự án</h2>
 <h3>Personal Portfolio Website</h3>
-<p>
-Trang web giới thiệu cá nhân sử dụng HTML, CSS và JavaScript.
-</p>
-<p>Công nghệ: HTML, CSS, JS</p>
-<a href="https://github.com/Kyrr1nz">My GitHub</a>
+<p>This web is use for my Personal Infomation</p>
+<p>Technologies: HTML, CSS, JS</p>
+<a href="https://github.com/Kyrr1nz">Link</a>
         <nav>
             <a href="/index.HTML">Home</a>
         </nav>
